<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="200dp"
    android:layout_width="match_parent"
    tools:parentTag="android.widget.LinearLayout"
    tools:orientation="horizontal">

    <little.goose.common.widget.WheelPicker
        android:id="@+id/year_picker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.4"
        app:textSize="16sp" />
    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/timepicker_text"
        android:text="@string/year" />
    <little.goose.common.widget.WheelPicker
        android:id="@+id/month_picker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:textSize="22sp"/>
    <TextView
        android:id="@+id/tv_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/timepicker_text"
        android:text="@string/month" />
    <little.goose.common.widget.WheelPicker
        android:id="@+id/date_picker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:textSize="22sp"/>
    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/timepicker_text"
        android:text="@string/day" />
    <little.goose.common.widget.WheelPicker
        android:id="@+id/hour_picker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:textSize="22sp"/>
    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/timepicker_text"
        android:text="@string/hour" />
    <little.goose.common.widget.WheelPicker
        android:id="@+id/minute_picker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:textSize="22sp"/>
    <TextView
        android:id="@+id/tv_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/timepicker_text"
        android:text="@string/minute"/>

</merge>